# programming-exercise-solutions

./: .gitignore  README.md
advent/2016/: Makefile  adv1.ml  adv2.ml  adv3.ml  advent.ml  advent.mli  main.ml
archive/challenge-0001/: easy.cxx  easy.rb  easy.rs  hard.cxx  hard.rb  intermediate.rb
archive/challenge-0002-adventure-in-c/: CMakeLists.txt  Doxyfile  README.md
archive/challenge-0002-adventure-in-c/src/: CMakeLists.txt  adventure.c  biological.c  game_controller.c  game_map.c  inventory.c  node.c  tprint.c
archive/challenge-0003/: .adaencrypt.adb.swp  README.md  adaencrypt.adb  ciphers.adb  ciphers.ads
archive/challenge-0003-ceasar-cipher/: .gitignore  README.md  adaencrypt  ciphers.adb
archive/challenge-0004-password-generator/: README.md  rpass.c  rpass.cxx  rpass.rb
archive/challenge-0007/: morse.hs
archive/challenge-0008/: 99bottles.rs  num2en.hs
archive/challenge-0009/: digits.erl  file.txt  treplace.erl
archive/challenge-0010/: symbanagrams.erl  vphone.erl
archive/challenge-0011/: easy.lua  intermediate.lua
archive/challenge-0012/: factorize.erl  permute.erl  sound.c
archive/challenge-0014/: reverseblock.cxx  reverseblock.erl  sieve_of_sundaram.erl
archive/challenge-0017/: stars.erl  tictac.erl  wsearch.erl
archive/challenge-0018/: form.txt  formmaker.erl  phone.erl  spiral.erl
archive/challenge-0022/: easy.rs  intermediate.rs
archive/challenge-0023/: halflist.erl  halflist.rs  intermediate.rs
archive/challenge-0024/: pi.rs
archive/challenge-0025/: tobin.rs  votes.rs
archive/challenge-0026/: easy.rs  intermediate.rs
(+127 files in other folders)
